@@ -2,6 +2,9 @@
 
 	* upgrade_1_X.postgresql.sql: correct charset setting.
 
+	* donrails/lib/modules/moinmoin.rb: support the automatic link
+	feature.
+
 2006-11-26  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
 	* donrails/app/controllers/application.rb (ApplicationController::don_is_spam): New feature: Whitelist.
